syntax = "proto3";
package com.miscsb.bubble;
 
option java_package = "com.miscsb.bubble.api.proto";
option java_multiple_files = true;

message BubbleDto {
    string name = 1;
    double lat  = 2;
    double lon  = 3;
}

message CreateBubbleRequest     { BubbleDto data = 1; }
message CreateBubbleResponse    { int64 bid = 1; }

message UpdateBubbleRequest     { int64 bid = 1; BubbleDto data = 2; }
message UpdateBubbleResponse    { reserved 1, 2; }

message DeleteBubbleRequest     { int64 bid = 1; }
message DeleteBubbleResponse    { reserved 1, 2; }

message GetBubbleRequest        { int64 bid = 1; }
message GetBubbleResponse       { BubbleDto data = 1; }

message ResetUserBubbleRequest  { int64 uid = 1; }
message ResetUserBubbleResponse { reserved 1, 2; }

message SetUserBubbleRequest    { int64 uid = 1; int64 bid = 2; }
message SetUserBubbleResponse   { reserved 1, 2; }

message GetUserBubbleRequest    { int64 uid = 1; }
message GetUserBubbleResponse   { int64 bid = 1; }

service BubbleService {
    rpc createBubble (CreateBubbleRequest) returns (CreateBubbleResponse);
    rpc    getBubble    (GetBubbleRequest) returns    (GetBubbleResponse);
    rpc updateBubble (UpdateBubbleRequest) returns (UpdateBubbleResponse);
    rpc deleteBubble (DeleteBubbleRequest) returns (DeleteBubbleResponse);

    rpc resetUserBubble (ResetUserBubbleRequest) returns (ResetUserBubbleResponse);
    rpc   setUserBubble   (SetUserBubbleRequest) returns   (SetUserBubbleResponse);
    rpc   getUserBubble   (GetUserBubbleRequest) returns   (GetUserBubbleResponse);
}
